# anki-art-snob

./: .gitignore  CHANGELOG.md  README.md  data.py  deck.json  deck.py  deck_art_snob_test.json  pyproject.toml
src/artsnob/: __init__.py  deck.py
