[tool.poetry]
name = "artsnob"
version = "0.1.0"
description = ""
authors = ["Rinat Sabitov <rinat.sabitov@gmail.com>"]
readme = "README.md"

packages = [
    { include = "main.py" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
beautifulsoup4 = "^4.12.0"
requests = "^2.28.2"
requests-cache = "^1.0.0"
lxml = "^4.9.2"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
