[project]
name = "artsnob"
version = "0.3.2"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
    "requests-cache>=1.2.1",
    "lxml>=5.3.0",
]

# scripts
[project.scripts]
deck = "artsnob:generate_deck"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
